--- a/CBPr/ARMCB.dproj
+++ b/CBPr/ARMCB.dproj
@@ -45,6 +45,7 @@
       <Form>fmMain</Form>
     </DCCReference>
     <DCCReference Include="uRep311.pas" />
+    <DCCReference Include="urep3251.pas" />
     <DCCReference Include="Verba.pas" />
   </ItemGroup>
 </Project>
